test/corpus/basics.txt
==========
Single menu command
==========

/ip route print

---

(source_file
  (menu_command
    (menu_prefix)
    (root_menu
      (identifier))
    (sub_menu
      (identifier))
    (sub_menu
      (identifier))))
