test/corpus/global_commands.txt
==========
:put with string
==========

:put "hello"

---

(source_file
  (global_command
    (global_command_name
      (identifier))
    (literal
      (string))))

==========
:local declaration
==========

:local myVar 42

---

(source_file
  (global_command
    (global_command_name
      (identifier))
    (identifier)
    (literal
      (number))))

==========
:global with value
==========

:global myVar true

---

(source_file
  (global_command
    (global_command_name
      (identifier))
    (identifier)
    (literal
      (boolean_literal))))

==========
:set with value
==========

:set myVar 100

---

(source_file
  (global_command
    (global_command_name
      (identifier))
    (identifier)
    (literal
      (number))))

==========
:log with topic and message
==========

:log info "message"

---

(source_file
  (global_command
    (global_command_name
      (identifier))
    (identifier)
    (literal
      (string))))

==========
:delay
==========

:delay 5s

---

(source_file
  (global_command
    (global_command_name
      (identifier))
    (literal
      (duration))))

==========
:return
==========

:return true

---

(source_file
  (global_command
    (global_command_name
      (identifier))
    (literal
      (boolean_literal))))

==========
:nothing
==========

:nothing

---

(source_file
  (global_command
    (global_command_name
      (identifier))))

==========
:parse
==========

:parse "source code"

---

(source_file
  (global_command
    (global_command_name
      (identifier))
    (literal
      (string))))
