test/corpus/named_params.txt
==========
Named param in menu command
==========

/ip route add gateway=10.0.0.1 distance=1

---

(source_file
  (menu_command
    (menu_prefix)
    (root_menu
      (identifier))
    (sub_menu
      (identifier))
    (sub_menu
      (identifier))
    (named_param
      (identifier)
      (literal
        (ip_address)))
    (named_param
      (identifier)
      (literal
        (number)))))
