test/corpus/operators_nav.txt
==========
Parent navigation
==========

..

---

(source_file
  (parent_navigation))

==========
Arithmetic operators
==========

:put (1 + 2 - 3 * 4 / 5 % 6)

---

(source_file
  (global_command
    (global_command_name
      (identifier))
    (subexpression
      (literal
        (number))
      (operator)
      (literal
        (number))
      (operator)
      (literal
        (number))
      (operator)
      (literal
        (number))
      (operator)
      (literal
        (number))
      (operator)
      (literal
        (number)))))

==========
Comparison operators
==========

:put ($a = $b != $c < $d > $e <= $f >= $g)

---

(source_file
  (global_command
    (global_command_name
      (identifier))
    (subexpression
      (function_call
        function: (variable_reference
          (identifier))
        (operator))
      (function_call
        function: (variable_reference
          (identifier))
        (operator))
      (function_call
        function: (variable_reference
          (identifier))
        (operator))
      (function_call
        function: (variable_reference
          (identifier))
        (operator))
      (function_call
        function: (variable_reference
          (identifier))
        (operator))
      (function_call
        function: (variable_reference
          (identifier))
        (operator))
      (variable_reference
        (identifier)))))

==========
Logical operators
==========

:put (true && false || true)

---

(source_file
  (global_command
    (global_command_name
      (identifier))
    (subexpression
      (literal
        (boolean_literal))
      (operator)
      (literal
        (boolean_literal))
      (operator)
      (literal
        (boolean_literal)))))

==========
Logical keyword operators
==========

:put (true and false or true)

---

(source_file
  (global_command
    (global_command_name
      (identifier))
    (subexpression
      (literal
        (boolean_literal))
      (identifier)
      (literal
        (boolean_literal))
      (identifier)
      (literal
        (boolean_literal)))))

==========
Negation operator
==========

:put (!true)

---

(source_file
  (global_command
    (global_command_name
      (identifier))
    (subexpression
      (operator)
      (literal
        (boolean_literal)))))

==========
Bitwise operators
==========

:put (0.0.0.0 & 255.255.255.0 | 1.2.3.4 ^ 5.6.7.8)

---

(source_file
  (global_command
    (global_command_name
      (identifier))
    (subexpression
      (literal
        (ip_address))
      (operator)
      (literal
        (ip_address))
      (operator)
      (literal
        (ip_address))
      (operator)
      (literal
        (ip_address)))))

==========
Shift operators
==========

:put (1 << 2 >> 1)

---

(source_file
  (global_command
    (global_command_name
      (identifier))
    (subexpression
      (literal
        (number))
      (operator)
      (literal
        (number))
      (operator)
      (literal
        (number)))))

==========
Regex match
==========

:put ("hello" ~ "h.*o")

---

(source_file
  (global_command
    (global_command_name
      (identifier))
    (subexpression
      (literal
        (string))
      (operator)
      (literal
        (string)))))

==========
Concatenation dot
==========

:put ("hello" . " " . "world")

---

(source_file
  (global_command
    (global_command_name
      (identifier))
    (subexpression
      (literal
        (string))
      (operator)
      (literal
        (string))
      (operator)
      (literal
        (string)))))

==========
In operator
==========

:put (192.168.1.0/24 in 192.168.0.0/16)

---

(source_file
  (global_command
    (global_command_name
      (identifier))
    (subexpression
      (literal
        (ip_prefix))
      (identifier)
      (literal
        (ip_prefix)))))
